# taxtrace

./: .env.example  .gitignore  CLAUDE.md  EFFECTIVENESS.md  ELON_EMAIL.md  README.md  biome.json  package.json  pyproject.toml  tsconfig.base.json  turbo.json
.claude/: settings.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/routes/: anomalies.ts  contracts.ts  donations.ts  entities.ts  network.ts  search.ts  stats.ts
apps/lambda/: build.js  package.json  tsconfig.json
apps/lambda/src/: index.ts
apps/web/: index.html  next.config.ts  package.json  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: App.tsx  index.css
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AnomaliesFeed.tsx  EntityProfile.tsx  Footer.tsx  Header.tsx  NetworkView.tsx  Providers.tsx  Search.tsx  SearchResults.tsx  StatsBlock.tsx
apps/web/src/lib/: api.ts  format.ts
apps/web/src/pages/: AboutPage.tsx  AnomaliesPage.tsx  EntityPage.tsx  HomePage.tsx  SearchPage.tsx
apps/worker/: package.json  tsconfig.json
benchmarks/: __init__.py  bench.ts  bench_agent_latency.py  bench_end2end.py  bench_pc.py  bench_propagate.py  bench_screen.py  package.json  results.md
data/: top_100_riskiest.json  top_100_riskiest.md
frontend/src/components/: Composer.tsx
frontend/src/lib/: api.ts
scripts/: top_100_riskiest.py
skyshield/: __init__.py  constants.py  types.py
skyshield/agent/: tools.py
skyshield/avoid/: fleet.py
skyshield/eval/: tracss_runner.py
skyshield/pc/: __init__.py  alfano.py  chan.py  covariance.py  foster.py  monte_carlo.py  patera.py
skyshield/pc/tests/: test_pc.py
skyshield/propagate/: __init__.py  ephemeris.py  ocm.py  sgp4_jax.py  tle.py
skyshield/propagate/tests/: test_ocm.py  test_sgp4_jax.py  test_tle.py
skyshield/screen/: smart_screen.py  vector_screen.py
(+8 files in other folders)
